[project]
name = "testable-ipc"
version = "0.0.1"
description = "Interface for testing"

requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.7",
    "paho-mqtt>=2.1.0",
    "isodate>=0.7.2",
    "pyqttier>=0.2.5",
    "stinger-python-utils>=0.1.5",
    
]


[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "mypy>=1.19.1",
]



[project.optional-dependencies]
tui = ["textual"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
testable-tui = "testableipc.tui.app:main"


[tool.setuptools.package-data]
packages = ["testableipc"]

[stinger-ipc]
generator_version = "0.6.16"

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "textual.*",
]
ignore_missing_imports = true