[project]
name = "testable-ipc"
version = "0.0.1"
description = "Interface for testing"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.7",
    "paho-mqtt>=2.1.0",
    "isodate>=0.7.2",
    "pyqttier>=0.2.0",
    "stinger-python-utils>=0.1.4",
    
]


[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "mypy>=1.19.1",
]




[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[tool.setuptools.package-data]
packages = ["testableipc"]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "textual.*",
]
ignore_missing_imports = true