[package]
name = "test_able_ipc"
version = "0.0.1"
edition = "2021"

[features]
default = []
client = ["payloads", "tracing", "tracing-subscriber"]
server = ["payloads", "async-trait", "tracing", "tracing-subscriber"]
payloads = []

[dependencies]
# Core dependencies (always available)
futures = "0.3.31"
stinger-mqtt-trait = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
chrono = "0.4.42"
iso8601-duration = "0.2.0"
builder-pattern = "0.4"
base64 = "0.22.1"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"] }
bytes = "1.10.1"
async-trait = { version = "0.1", optional = true } # For server-side async traits


[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[example]]
name = "test_able_client_demo"
path = "examples/client_demo.rs"
required-features = ["client"]

[[example]]
name = "test_able_server_demo" 
path = "examples/server_demo.rs"
required-features = ["server"]

[[example]]
name = "test_able_connection_demo"
path = "examples/pub_and_recv.rs"
required-features = ["payloads"]