[project]
name = "weather-37-ipc"
version = "0.1.2"
description = "NWS weather forecast"
requires-python = ">=3.7"
dependencies = [
    "pydantic==2.5.3",
    "paho-mqtt>=2.1.0",
    "isodate>=0.7.2",
    "pyqttier>=0.2.4",
    "stinger-python-utils>=0.1.5",
    "typing-extensions>=4.0.0",
]




[project.optional-dependencies]
tui = ["textual"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
weather-tui = "weatheripc.tui.app:main"


[tool.setuptools.package-data]
packages = ["weatheripc"]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "textual.*",
]
ignore_missing_imports = true