[package]
name = "connection"
version = "0.1.0"
edition = "2021"

[dependencies]
paho-mqtt = "0.13.3"
futures = "0.3"
num-traits = "0.2.19"
num-derive = "0.4.2"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]