[package]
name = "full_server"
version = "0.0.1"
edition = "2024"

[dependencies]
full_types = { path = "../payloads" }
futures = "0.3"
json = "0.12.4"
mqttier = "0.3.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
tracing = "0.1.41"

[[example]]
name = "full_server_demo"
path = "examples/server.rs"