[package]
name = "weather_client"
version = "0.1.2"
edition = "2024"

[dependencies]
mqttier = { git = "https://github.com/stinger-ipc/mqttier.git", rev = "4d3f110355da07265e8e58494395513256894f4c" }
weather_types = { path = "../payloads" }
futures = "0.3"
json = "0.12.4"
paho-mqtt = "0.13.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4"
env_logger = "0.10"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[[example]]
name = "weather_client_demo"
path = "examples/client.rs"