[package]
name = "weather_server"
version = "0.0.1"
edition = "2024"

[dependencies]
connection = { path = "../connection" }
futures = "0.3"
json = "0.12.4"
paho-mqtt = "0.13.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[[example]]
name = "weather_server_example"
path = "examples/server.rs"